fix z-index and hero section

--- a/src/sections/Hero/Hero.module.css
+++ b/src/sections/Hero/Hero.module.css
@@ -1,6 +1,5 @@
 /* Hero */
 .heroBg {
-  /* background-image: url('../../public/images/hero/hero-bg.webp'); */
   background-image: url('~/public/images/hero/hero-bg.webp');
   background-repeat: no-repeat;
   background-position: center;
@@ -16,8 +15,8 @@
   position: absolute;
   width: 220px;
   height: 220px;
-  left: -35%;
-  top: 20%;
+  left: -38%;
+  top: 15%;
   background: url('~/public/images/hero/left-balloons.webp');
   z-index: 10;
   background-size: cover;
@@ -29,7 +28,7 @@
   width: 220px;
   height: 220px;
   right: -23%;
-  bottom: -50%;
+  bottom: -12%;
   background: url('~/public/images/hero/right-balloons.webp');
   z-index: 10;
   background-size: cover;
@@ -49,14 +48,14 @@
   .balloons::before {
     width: 330px;
     height: 325px;
-    top: 40%;
+    top: 27%;
     left: -19%;
   }
 
   .balloons::after {
     width: 320px;
     height: 320px;
-    bottom: -63%;
+    bottom: -13%;
     right: -12%;
   }
 
@@ -90,13 +89,13 @@
     width: 620px;
     height: 640px;
     top: 15%;
-    left: -27%;
+    left: -25%;
   }
 
   .balloons::after {
     width: 650px;
     height: 650px;
-    bottom: -101%;
+    bottom: -30%;
     right: -19%;
   }
 
@@ -110,7 +109,7 @@
     width: 720px;
     height: 720px;
     transform: rotate(180deg);
-    right: -10%;
-    top: 48%;
+    right: 1%;
+    top: 36%;
   }
 }
